fixed bash code blocks that should be js clode blocks

--- a/content/courses/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports.mdx
+++ b/content/courses/advanced-cypress-concepts/how-to-test-various-browsers-and-viewports.mdx
@@ -46,11 +46,11 @@ it('Show warning outside Chrome', { browser: 'chrome' }, () => {
 
 You can even do this for all tests located within a `describe()` block like so:
 
-```bash
-describe('happy path suite', { browser: 'firefox' }, () => {
-  it('...')
-  it('...')
-  it('...')
+```js
+describe("happy path suite", { browser: "firefox" }, () => {
+  it("...")
+  it("...")
+  it("...")
 })
 ```
 
