--- a/content/real-world-examples/bank-accounts/users-without-bank-accounts.mdx
+++ b/content/real-world-examples/bank-accounts/users-without-bank-accounts.mdx
@@ -2,37 +2,40 @@
 
 Before continuing, make sure you have read the [Bank Accounts Overview & Setup](Bank%20Accounts%20Overview%20&%20Setup%20c40a9fd9fa964f47a726d51989ad5a90.md) lesson first.
 
-```bash
+```js
 it("renders an empty bank account list state with onboarding modal", function () {
-    cy.wait("@getNotifications");
-    cy.intercept("POST", apiGraphQL, (req) => {
-      const { body } = req;
-      if (body.hasOwnProperty("operationName") && body.operationName === "ListBankAccount") {
-        req.alias = "gqlListBankAccountQuery";
-        req.continue((res) => {
-          res.body.data.listBankAccount = [];
-        });
-      }
-    });
+  cy.wait("@getNotifications")
+  cy.intercept("POST", apiGraphQL, (req) => {
+    const { body } = req
+    if (
+      body.hasOwnProperty("operationName") &&
+      body.operationName === "ListBankAccount"
+    ) {
+      req.alias = "gqlListBankAccountQuery"
+      req.continue((res) => {
+        res.body.data.listBankAccount = []
+      })
+    }
+  })
 
-    cy.visit("/bankaccounts");
-    cy.wait("@getNotifications");
-    cy.wait("@gqlListBankAccountQuery");
+  cy.visit("/bankaccounts")
+  cy.wait("@getNotifications")
+  cy.wait("@gqlListBankAccountQuery")
 
-    cy.getBySel("bankaccount-list").should("not.exist");
-    cy.getBySel("empty-list-header").should("contain", "No Bank Accounts");
-    cy.getBySel("user-onboarding-dialog").should("be.visible");
-    cy.getBySel("nav-top-notifications-count").should("exist");
-    cy.visualSnapshot("User Onboarding Dialog is Visible");
-  });
+  cy.getBySel("bankaccount-list").should("not.exist")
+  cy.getBySel("empty-list-header").should("contain", "No Bank Accounts")
+  cy.getBySel("user-onboarding-dialog").should("be.visible")
+  cy.getBySel("nav-top-notifications-count").should("exist")
+  cy.visualSnapshot("User Onboarding Dialog is Visible")
+})
 ```
 
 You can find out more information about the custom Cypress commands used in this test [here](https://www.notion.so/RWA-Custom-Cypress-Commands-Tasks-Functions-5efc9089b2184a22910b5532796a65dd).
 
 First, we wait upon our aliased intercept `@getNotifications`
 
-```bash
-cy.wait("@getNotifications");
+```js
+cy.wait("@getNotifications")
 ```
 
 Next, we use `cy.intercept` to intercept the `POST` request to our GraphQL endpoint. We then determine if the `POST` request is a GraphQL query to "ListBankAccount." If so, we set the alias to `gqlListBankAccountQuery`.
@@ -56,15 +59,15 @@ cy.intercept("POST", `${Cypress.env("apiUrl")}/graphql`, (req) => {
 
 We then `.visit()` the `/bankaccounts` route.
 
-```bash
-cy.visit("/bankaccounts");
+```js
+cy.visit("/bankaccounts")
 ```
 
 Then we wait on two intercepts—one for `@getNotifications` and the other for `@gqlListBankAccountQuery`. Remember the `@getNotifications` intercept happens in the `beforeEach()` hook.
 
-```bash
-cy.wait("@getNotifications");
-cy.wait("@gqlListBankAccountQuery");
+```js
+cy.wait("@getNotifications")
+cy.wait("@gqlListBankAccountQuery")
 ```
 
 Finally, we write some assertions to make sure our UI is displaying the elements that it should. We first want to ensure that the element that would normally display our bank accounts does not exist in the `DOM`.
