--- a/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/todomvc-app-install-and-overview.mdx
@@ -47,7 +47,7 @@ yarn start
 
 ![](/images/testing-your-first-application/todomvc-app-install-and-overview/Screen_Shot_2021-09-17_at_10.13.44_AM.png)
 
-You can then open your browser to the HTTP server URL shown in the console (e.g. `http://localhost:8888`), and you should see the following:
+You can then open your browser to the HTTP server URL shown in the console (e.g. **http://localhost:8888**), and you should see the following:
 
 ![](/images/testing-your-first-application/todomvc-app-install-and-overview/Screen_Shot_2021-06-24_at_1.08.11_PM.png)
 
