--- a/content/courses/testing-your-first-application/cypress-command-logs-snapshots-and-aliases.mdx
+++ b/content/courses/testing-your-first-application/cypress-command-logs-snapshots-and-aliases.mdx
@@ -2,9 +2,9 @@
 
 When writing custom [Cypress commands](https://docs.cypress.io/api/cypress-api/custom-commands), it is often helpful to output custom messages and information to the test runner with logging. Since Cypress commands are an abstraction, having proper logging reminds you of the context and purpose of the custom command.
 
-To learn how to utilize `Cypress.log()`, we will update our `createDefaultTodos` command to log some helpful information.
+To learn how to utilize `Cypress.log()`, we will update our **createDefaultTodos** command to log some helpful information.
 
-Before we do that, let's update our test file to only run our `adds three todos` test. You can easily do this by appending `.only()` to our test, like so:
+Before we do that, let's update our test file to only run our **adds three todos** test. You can easily do this by appending `.only()` to our test, like so:
 
 ```js
 it.only("adds three todos", () => {
@@ -34,7 +34,7 @@ Before we do, however, let's go over what this is doing.
 
 First, we are passing an object to `Cypress.log()` with a name and `consoleProps()`. The `consoleProps()` function allows us to create our custom message that will be printed to our browser's console whenever we click on it within the test runner. We will see this in action shortly.
 
-Now let's update our custom command in `cypress/support/commands.js` , with our log.
+Now let's update our custom command in **cypress/support/commands.js** , with our log.
 
 ```js
 Cypress.Commands.add("createDefaultTodos", () => {
@@ -85,7 +85,7 @@ Save the file, and now the output should be much cleaner.
 
 ## Aliases
 
-[Aliases in Cypress](https://docs.cypress.io/guides/core-concepts/variables-and-aliases) provide a way for you to reference something later on in your test. You can think of it as a variable where you store something to use later on. Within our custom command to `createDefaultTodos`, we can return our newly created todo's from the command, which we can then access as an alias within our test. Aliases can be used for all sorts of things, but in our case, we want to alias the todo elements or `<li>'s` from the DOM. This will make more sense when we break down the code involved and update our test to use this alias.
+[Aliases in Cypress](https://docs.cypress.io/guides/core-concepts/variables-and-aliases) provide a way for you to reference something later on in your test. You can think of it as a variable where you store something to use later on. Within our custom command to **createDefaultTodos**, we can return our newly created todo's from the command, which we can then access as an alias within our test. Aliases can be used for all sorts of things, but in our case, we want to alias the todo elements or `<li>'s` from the DOM. This will make more sense when we break down the code involved and update our test to use this alias.
 
 The first thing we want to do is store our newly created log into a variable.
 
@@ -100,13 +100,13 @@ let cmd = Cypress.log({
 })
 ```
 
-Then, we get all of the `.todo-list` `<li>` elements, which are the three todos. We are also turning off logging for `.get()` in the test runner.
+Then, we get all of the **.todo-list** `<li>` elements, which are the three todos. We are also turning off logging for `cy.get()` in the test runner.
 
 ```js
 cy.get(".todo-list li", { log: false })
 ```
 
-`.then()` we are putting those elements into a variable called `$listItems` which we then `.set()` on our `Cypress.log()` . Finally, we use `[.end()](https://docs.cypress.io/api/commands/end)` to let Cypress now that our command is finished.
+`.then()` we are putting those elements into a variable called **$listItems** which we then `.set()` on our `Cypress.log()` . Finally, we use [.end()](https://docs.cypress.io/api/commands/end) to let Cypress now that our command is finished.
 
 ```js
 .then(function ($listItems) {
@@ -144,7 +144,7 @@ Cypress.Commands.add("createDefaultTodos", () => {
 
 Our test should still pass after saving the file, but nothing has changed, as we are not using our todo items as an alias. Let's update one of our tests to take advantage of this alias.
 
-We will be updating our test called `adds three todos` like so:
+We will be updating our test called **adds three todos** like so:
 
 ```js
 it.only("adds three todos", () => {
@@ -157,11 +157,11 @@ After saving the file, our test is still passing, and the runner has also logged
 
 ![](/images/testing-your-first-application/cypress-command-logs-snapshots-and-aliases/Screen_Shot_2021-06-28_at_10.48.45_AM.png)
 
-Now the test runner states explicitly that our `.get()` is getting `@todos` which is the alias we just created.
+Now the test runner states explicitly that our `.get()` is getting **@todos** which is the alias we just created.
 
 ## Snapshot
 
-Before we wrap up this lesson, we would like to introduce you to the `.snapshot()` method. Currently, when you click on our custom `createDefaultTodos` command in the test runner, you will see the following.
+Before we wrap up this lesson, we would like to introduce you to the `.snapshot()` method. Currently, when you click on our custom **createDefaultTodos** command in the test runner, you will see the following.
 
 ![](/images/testing-your-first-application/cypress-command-logs-snapshots-and-aliases/Screen_Shot_2021-06-28_at_10.52.41_AM.png)
 
@@ -183,4 +183,4 @@ Next to the "DOM Snapshot (pinned)," you will see two buttons with a 1 and 2, re
 
 ## Practice
 
-Update the `should append new items to the bottom of the list` test to use an alias as we did in the `adds three todos` test.
+Update the **should append new items to the bottom of the list** test to use an alias as we did in the **adds three todos** test.
