--- a/content/courses/testing-your-first-application/installing-cypress-and-writing-our-first-test.mdx
+++ b/content/courses/testing-your-first-application/installing-cypress-and-writing-our-first-test.mdx
@@ -10,7 +10,7 @@ We can add Cypress to our project with the following command:
 yarn add Cypress -D
 ```
 
-Next we will add a custom npm script so we can launch Cypress easily. Within the `package.json` file add `"cypress:open": "cypress open"` to the `"scripts"` object. The entire `"scripts"` object should look like this:
+Next we will add a custom npm script so we can launch Cypress easily. The entire "scripts" object within **package.json** should look like this:
 
 ```json
 "scripts": {
@@ -43,7 +43,7 @@ When Cypress first launches, it will display some helpful information on a scree
 
 Click on the green "Ok, got it!" button to close the modal.
 
-Cypress automatically creates several example spec files for you. If this is your first time using Cypress, we highly recommend that you click on some of them to see the Cypress test runner in action. You can find them within `cypress/integration/examples`.
+Cypress automatically creates several example spec files for you. If this is your first time using Cypress, we highly recommend that you click on some of them to see the Cypress test runner in action. You can find them within **cypress/integration/examples**.
 
 Don't worry if you don't understand them yet or feel a bit overwhelmed. We will be writing our own tests shortly, and we will explain every line of code along the way.
 
@@ -57,7 +57,7 @@ You can select which browser Cypress should use in the upper right-hand corner. 
 
 Now that we have Cypress installed and working let's write our first test for our todo application.
 
-Create a new file called `app.spec.js` within the `cypress/integration` directory.
+Create a new file called **app.spec.js** within the **cypress/integration** directory.
 
 ![](/images/testing-your-first-application/installing-cypress-and-writing-our-first-test/Screen_Shot_2021-06-25_at_10.02.58_AM.png)
 
@@ -87,13 +87,13 @@ Now let's write out these steps into our test.
 
 Before having Cypress click into the input field, we first need to grab the input field element from the DOM, so Cypress knows which element to click.
 
-If we inspect the element with our browser's dev tools, we will notice that the input field has a class of `new-todo` .
+If we inspect the element with our browser's dev tools, we will notice that the input field has a class of **new-todo** .
 
 ```js
 <input class="new-todo" placeholder="What needs to be done?" data-reactid=".0.0.1">
 ```
 
-Therefore we can `get` this element like so:
+Therefore we can `cy.get()` this element like so:
 
 ```js
 cy.get(".new-todo")
@@ -109,17 +109,17 @@ describe("React TodoMVC", () => {
 })
 ```
 
-When Cypress launches, you will see several example files, so toggle the small arrow to the left of the `examples` folder to collapse that folder. You can also click the "COLLAPSE ALL" button to collapse everything.
+When Cypress launches, you will see several example files, so toggle the small arrow to the left of the **examples** folder to collapse that folder. You can also click the "COLLAPSE ALL" button to collapse everything.
 
 ![](/images/testing-your-first-application/installing-cypress-and-writing-our-first-test/Screen_Shot_2021-06-25_at_10.20.05_AM.png)
 
-Now click on the `app.spec.js` file to launch the file containing our test.
+Now click on the **app.spec.js** file to launch the file containing our test.
 
 You should see an error like this:
 
 ![](/images/testing-your-first-application/installing-cypress-and-writing-our-first-test/Screen_Shot_2021-06-25_at_10.20.58_AM.png)
 
-Cypress is telling us that it is unable to `get` our input element with the class of `.new-todo`. If you look at the right side of Cypress, you will see a message that says, "This is the default blank page," with some hints about what to do. This is just a blank page that Cypress opens when it doesn't know where to go, but we want Cypress to open our todo application. Let's go back to our test and tell Cypress how to `.navigate()` to our app.
+Cypress is telling us that it is unable to `cy.get()` our input element with the class of **.new-todo**. If you look at the right side of Cypress, you will see a message that says, "This is the default blank page," with some hints about what to do. This is just a blank page that Cypress opens when it doesn't know where to go, but we want Cypress to open our todo application. Let's go back to our test and tell Cypress how to `cy.navigate()` to our app.
 
 We can use the `cy.visit()` method to tell Cypress which URL to visit:
 
@@ -136,7 +136,7 @@ Cypress provides an excellent developer experience in that each time we save our
 
 ![](/images/testing-your-first-application/installing-cypress-and-writing-our-first-test/Screen_Shot_2021-06-25_at_10.25.30_AM.png)
 
-The green checkmark in the Cypress Command Log, on the left side of the screen, means that Cypress has successfully found the input with the class of `new-todo`.
+The green checkmark in the Cypress Command Log, on the left side of the screen, means that Cypress has successfully found the input with the class of **new-todo**.
 
 Next, we need to enter the name of our todo. We can do that using the `.type()` method and passing in a string of what we would like Cypress to type into the input.
 
@@ -148,7 +148,7 @@ After saving our file, Cypress will re-run our test, and you should see the foll
 
 ![](/images/testing-your-first-application/installing-cypress-and-writing-our-first-test/Screen_Shot_2021-06-25_at_10.27.18_AM.png)
 
-Next, we need to simulate the user pressing the `enter` key to add the todo.
+Next, we need to simulate the user pressing the **enter** key to add the todo.
 
 ```js
 cy.get(".new-todo").type("Buy Milk{enter}")
@@ -171,7 +171,7 @@ describe("React TodoMVC", () => {
 
 With just a few lines of code, we have written our first test that confirms that we can add a single todo to our application.
 
-Before we wrap this up, however, I want you to think about this question, "How do we know only a single todo has been added?" Our test confirms that we can add a single todo, but how do we know for sure that only a single todo exists? We need a way to `assert` that only a single todo can be added. Let's see how we can do this.
+Before we wrap this up, however, I want you to think about this question, "How do we know only a single todo has been added?" Our test confirms that we can add a single todo, but how do we know for sure that only a single todo exists? We need a way to assert that only a single todo can be added. Let's see how we can do this.
 
 First, let's use our dev tools to inspect our newly added todo.
 
@@ -199,7 +199,7 @@ Let's break down what this line of code is doing.
 cy.get(".todo-list li")
 ```
 
-First, we are getting all of the `<li>` child elements of the `.todo-list` element. This will return an `array` of all of the child elements that it finds, which in our case should only be 1.
+First, we are getting all of the `<li>` child elements of the **.todo-list** element. This will return an array of all of the child elements that it finds, which in our case should only be 1.
 
 We then assert that this array should have a length of 1 element.
 
