--- a/content/courses/testing-your-first-application/testing-what-isnt-there.mdx
+++ b/content/courses/testing-your-first-application/testing-what-isnt-there.mdx
@@ -1,6 +1,6 @@
 # Testing what isn't there
 
-Up until this point, we have been writing tests and assertions to make sure that things are displayed correctly. For instance, the `should append new items to the bottom of the list` test makes sure that our todos are listed in the correct order and that the todo count text is correct.
+Up until this point, we have been writing tests and assertions to make sure that things are displayed correctly. For instance, the **should append new items to the bottom of the list** test makes sure that our todos are listed in the correct order and that the todo count text is correct.
 
 This is all well and good, but it is also important to write tests to ensure that things are _not_ shown when they are not supposed to be. So, in addition to testing the positive case, make sure also to test the negative.
 
@@ -22,7 +22,7 @@ cy.get(".footer").should("not.exist")
 
 Great, our test is passing. Let's also think of some other elements that should not exist when there are no todos.
 
-Another element that should not exist is our `.todo-list` element. Let's write another assertion to ensure that this does not exist if there are no todos.
+Another element that should not exist is our **.todo-list** element. Let's write another assertion to ensure that this does not exist if there are no todos.
 
 ```js
 cy.get(".todo-list").should("not.exist")
@@ -39,4 +39,4 @@ it("does NOT display the footer or todo-list when there are no todos", () => {
 
 # Practice:
 
-Write a new test that does the opposite of the test we just wrote. Instead of making sure something does not exist when there are no todo's, write a test that makes sure that the `<footer>` and `.todo-list` exist when there are todos.
+Write a new test that does the opposite of the test we just wrote. Instead of making sure something does not exist when there are no todo's, write a test that makes sure that the `<footer>` and **.todo-list** exist when there are todos.
