updated formating for cypress fundamentals content

--- a/content/courses/cypress-fundamentals/command-chaining.mdx
+++ b/content/courses/cypress-fundamentals/command-chaining.mdx
@@ -14,6 +14,6 @@ However, it is important to note that not all Cypress commands yield a subject t
 
 Cypress commands like `.get()` and `.contains()` yield DOM elements that can be chained, like in the example above.
 
-When you want to act upon a subject directly from a Cypress command, you need to yield the subject to `.then()`. We cover `.then()` and `.wrap()` in the [Understanding the Asynchronous nature of Cypress](Understanding%20the%20Asynchronous%20nature%20of%20Cypress%20c7f5d33cfa78414783e241d825fc4a0f.md) section.
+When you want to act upon a subject directly from a Cypress command, you need to yield the subject to `.then()`. We cover `.then()` and `.wrap()` in the [Understanding the Asynchronous nature of Cypress](/cypress-fundamentals/understanding-the-asynchronous-nature-of-cypress) lesson.
 
 You can learn more about command chaining from our docs [here](https://docs.cypress.io/guides/core-concepts/introduction-to-cypress#Chains-of-Commands).
