--- a/content/courses/cypress-fundamentals/cypress-is-just-javascript.mdx
+++ b/content/courses/cypress-fundamentals/cypress-is-just-javascript.mdx
@@ -25,11 +25,11 @@ _.each(feedViews, (feed, feedName) => {
 // ...
 ```
 
-This example comes from the [Real World App](https://github.com/cypress-io/cypress-realworld-app). You can see the entire test [here](https://github.com/cypress-io/cypress-realworld-app/blob/develop/cypress/tests/ui/transaction-feeds.spec.ts#L175).
+This example comes from the [Real World App](https://github.com/cypress-io/cypress-realworld-app).
 
 ## Using Array.forEach()
 
-Here is another example where we use `[Array.forEach()](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/forEach)` to iterate over an array.
+Here is another example where we use [Array.forEach()](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/forEach) to iterate over an array.
 
 ```js
 const people = ["moe", "curly", "larry"]
