--- a/content/courses/cypress-fundamentals/how-to-debug-failing-tests.mdx
+++ b/content/courses/cypress-fundamentals/how-to-debug-failing-tests.mdx
@@ -22,9 +22,9 @@ You can tell Cypress to take a screenshot manually by using the `cy.screenshot()
 
 ## Logging
 
-There are two useful ways to log information from your tests. One way is to use `cy.log()` the other is to use `console.log()` . Remember [Cypress is just JavaScript](Cypress%20is%20Just%20JavaScript%20bc735379ff5146d7918c6927e735b5d8.md) so you can leverage all of the helpful debugging techniques you use in JS too.
+There are two useful ways to log information from your tests. One way is to use `cy.log()` the other is to use `console.log()` . Remember [Cypress is just JavaScript](/cypress-fundamentals/cypress-is-just-javascript) so you can leverage all of the helpful debugging techniques you use in JS too.
 
-`[cy.log()](https://docs.cypress.io/api/commands/log)` will print a message to the Cypress Command Log
+[cy.log()](https://docs.cypress.io/api/commands/log) will print a message to the Cypress Command Log
 
 ![](/images/cypress-fundamentals/how-to-debug-failing-tests/Screen_Shot_2021-08-31_at_2.55.00_PM.png)
 
