--- a/content/courses/cypress-fundamentals/waiting-and-retry-ability.mdx
+++ b/content/courses/cypress-fundamentals/waiting-and-retry-ability.mdx
@@ -2,7 +2,7 @@
 
 ## Retry-ability & Flake resistance
 
-Retry-ability is a core feature of Cypress and having a proper understanding of it is incredibly important. While most other testing tools require you to add "hard" waits, where you tell the tool to wait for a specified amount of time, Cypress will automatically wait for you. Since [Cypress runs in the browser](Cypress%20runs%20in%20the%20browser%20dd2a2bb83a1440d6aba4b4f0458effaf.md), it understands everything that is happening within your application.
+Retry-ability is a core feature of Cypress and having a proper understanding of it is incredibly important. While most other testing tools require you to add "hard" waits, where you tell the tool to wait for a specified amount of time, Cypress will automatically wait for you. Since [Cypress runs in the browser](/cypress-fundamentals/cypress-runs-in-the-browser), it understands everything that is happening within your application.
 
 Cypress is notified the moment the page loads and the moment it unloads. It is also notified of any events that are fired. Cypress is also smart enough to know how fast an element is animating and will wait for it to stop animating before acting upon it. It will also automatically wait until an element becomes visible, becomes enabled, or when another element is no longer covering it.
 
@@ -53,7 +53,7 @@ describe("User Sign-up and Login", () => {
 })
 ```
 
-In this example, we are creating an alias called `signup` for the POST request to the `/users` endpoint. Then within our test, we tell Cypress to wait upon the `signup` alias to complete before continuing on with our test.
+In this example, we are creating an alias called **signup** for the POST request to the **/users** endpoint. Then within our test, we tell Cypress to wait upon the **signup** alias to complete before continuing on with our test.
 
 The [Real World App](https://github.com/cypress-io/cypress-realworld-app) is full of examples of waiting upon aliases, and we go over several examples within the "Real World Examples" section later on.
 
