--- a/content/courses/advanced-cypress-concepts/using-data-to-build-dynamic-tests.mdx
+++ b/content/courses/advanced-cypress-concepts/using-data-to-build-dynamic-tests.mdx
@@ -65,7 +65,7 @@ describe("Notifications", function () {
 })
 ```
 
-In this example, `cy.database()` is a custom Cypress command which performs operations on our database depending upon which arguments are passed into it. You can learn how this command works [here](<cy%20database()%2024eee289efbe4378bf83d1b050366049.md>).
+In this example, `cy.database()` is a custom Cypress command which performs operations on our database depending upon which arguments are passed into it. You can learn how this command works [here](/real-world-examples/custom-cypress-commands#cydatabase).
 
 ## Benefits of Data-Driven Tests
 
