--- a/content/courses/advanced-cypress-concepts/building-the-right-cypress-commands.mdx
+++ b/content/courses/advanced-cypress-concepts/building-the-right-cypress-commands.mdx
@@ -18,7 +18,7 @@ cy.get('[data-test="signup-password"]').type("s3cret")
 cy.get('[data-test="signup-confirmPassword"]').type("s3cret")
 ```
 
-In this example, we are selecting several elements that all have a `data-test` attribute. While there is nothing inherently wrong with this syntax, it is quite a bit verbose. We could clean this up quite a bit and simplify things by creating our own custom command.
+In this example, we are selecting several elements that all have a **data-test** attribute. While there is nothing inherently wrong with this syntax, it is quite a bit verbose. We could clean this up quite a bit and simplify things by creating our own custom command.
 
 Instead of writing all of the above, it would be nice to write.
 
@@ -30,9 +30,9 @@ cy.getBySel("signup-password").type("s3cret")
 cy.getBySel("signup-confirmPassword").type("s3cret")
 ```
 
-Let's see how to create the custom command `cy.getBySel`. You can create your own custom commands by placing them inside of `cypress/support/commands.js`.
+Let's see how to create the custom command `cy.getBySel()`. You can create your own custom commands by placing them inside of **cypress/support/commands.js**.
 
-Here is what the `cy.getBysel` looks like:
+Here is what the `cy.getBysel()` looks like:
 
 ```js
 Cypress.Commands.add("getBySel", (selector, ...args) => {
@@ -40,7 +40,7 @@ Cypress.Commands.add("getBySel", (selector, ...args) => {
 })
 ```
 
-As you can see, our custom command is a simple wrapper around `cy.get()`. This way, we can pass in the string contained within the `data-test` attribute, and our custom command will return the element.
+As you can see, our custom command is a simple wrapper around `cy.get()`. This way, we can pass in the string contained within the **data-test** attribute, and our custom command will return the element.
 
 ## Another Custom Command Example
 
@@ -55,7 +55,7 @@ Cypress.Commands.add("loginByApi", (username, password) => {
 })
 ```
 
-In this example, we use a custom command called `cy.loginByApi`, which accepts a username and password and then sends a post request to our API login route. Now within our tests, we can call this command, passing in a username and password.
+In this example, we use a custom command called `cy.loginByApi()`, which accepts a username and password and then sends a post request to our API login route. Now within our tests, we can call this command, passing in a username and password.
 
 ```js
 describe("POST /login", function () {
